# dsd-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: QUICK_START.md  USER_GUIDE.md
dsd_agent/: __init__.py  agent.py  cli.py  google_slides.py  gui.py  image_analyzer.py  integration_patterns.py  interactive.py  pptx_handler.py
